--- a/assets/scss/layout/_content-customer.scss
+++ b/assets/scss/layout/_content-customer.scss
@@ -3,7 +3,7 @@
         .overlay {
             position: relative;
             width: 100%;
-            background-image: url(/capstone2_hoangbao/assets/img/theme2.png);
+            background-image: url(/assets/img/theme2.png);
             @include fix-background();
             height: 716px;
             object-fit: cover;
