--- a/customer/view/store.html
+++ b/customer/view/store.html
@@ -247,7 +247,7 @@
         <div class="footer-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-12 col-sm-6 col-md-4">
                         <div class="footer__content">
                             <p>
                                 <i class="fa-brands fa-apple"></i>
@@ -256,12 +256,12 @@
                                 </span>
                             </p>
                             <div>
-                                <p>We pride ourselves on our efficiency and hard work, but most of all our ability to
+                                <p class="first__content">We pride ourselves on our efficiency and hard work, but most of all our ability to
                                     source you the best quality and best value products and devices in the market.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-12 col-sm-6 col-md-2">
                         <div class="footer__content">
                             <p>
                                 <span>
@@ -294,7 +294,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-12 col-sm-6 col-md-2">
                         <div class="footer__content">
                             <p>
                                 <span>
@@ -327,7 +327,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-12 col-sm-6 col-md-4">
                         <div class="footer__content">
                             <p>
                                 <span>
