--- a/admin/view/admin.html
+++ b/admin/view/admin.html
@@ -279,7 +279,7 @@
         <div class="footer-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4">
                         <div class="footer__content">
                             <p>
                                 <i class="fa-brands fa-apple"></i>
@@ -288,12 +288,12 @@
                                 </span>
                             </p>
                             <div>
-                                <p>We pride ourselves on our efficiency and hard work, but most of all our ability to
+                                <p class="first__content">We pride ourselves on our efficiency and hard work, but most of all our ability to
                                     source you the best quality and best value products and devices in the market.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-12 col-sm-6 col-md-2">
                         <div class="footer__content">
                             <p>
                                 <span>
@@ -326,7 +326,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-12 col-sm-6 col-md-2">
                         <div class="footer__content">
                             <p>
                                 <span>
@@ -359,7 +359,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-12 col-sm-6 col-md-4">
                         <div class="footer__content">
                             <p>
                                 <span>
