update new theme

--- a/assets/css/styleCustomer.css
+++ b/assets/css/styleCustomer.css
@@ -399,7 +399,7 @@ header .container-icon-cart:hover {
 }
 
 #content-customer .content-info-item {
-  background-image: url(/assets/img/theme2.png);
+  background-image: url(/assets/img/theme3.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
