--- a/assets/scss/layout/_content-customer.scss
+++ b/assets/scss/layout/_content-customer.scss
@@ -1,6 +1,6 @@
 #content-customer {
     .content-info-item {
-        background-image: url(/assets/img/theme2.png);
+        background-image: url(/assets/img/theme3.jpeg);
         @include fix-background();
         .overlay {
             position: relative;
